--- a/HealthyUDailyMiniChallenge/HealthyUDailyMiniChallenge.csproj
+++ b/HealthyUDailyMiniChallenge/HealthyUDailyMiniChallenge.csproj
@@ -267,6 +267,7 @@
     <Content Include="Scripts\knockout-3.1.0.js" />
     <Content Include="Scripts\modernizr-2.7.2.js" />
     <Content Include="Scripts\Resources.js" />
+    <Content Include="ToDo.txt" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
